mosiac gallery, some contact page work

--- a/gallery.html
+++ b/gallery.html
@@ -24,27 +24,27 @@
             </nav>
         </header>
         <main>
-            <h1>Gallery</h1>
+            <h1>Gallery<i>!</i></h1>
             <div class="gallery-container"> 
-                <div class="gallery0" data-index="0">
+                <div class="gallery-item gallery-item0">
                     <img src="artwork imgs/art1.png" alt="Artwork 1">
                 </div>
-                <div class="gallery1" data-index="1">
+                <div class="gallery-item gallery-item1">
                     <img src="artwork imgs/art2.png" alt="Artwork 2">
                 </div>
-                <div class="gallery2" data-index="2">
+                <div class="gallery-item gallery-item2">
                     <img src="artwork imgs/art3.jpg" alt="Artwork 3">
                 </div>
-                <div class="gallery3" data-index="3">
+                <div class="gallery-item gallery-item3">
                     <img src="artwork imgs/art4.png" alt="Artwork 4">
                 </div>
-                <div class="gallery4" data-index="4">
+                <div class="gallery-item gallery-item4">
                     <img src="artwork imgs/art5.png" alt="Artwork 5">
                 </div>
-                <div class="gallery5" data-index="5">
+                <div class="gallery-item gallery-item5">
                     <img src="artwork imgs/art6.png" alt="Artwork 6">
                 </div>
-            </div>
+            </div>                     
         </main>
     </div>
     <script src="script.js"></script>
