--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
             </nav>
         </header>
         <main>
-            <h1>Projects</h1>
+            <h1>Projects<i>!</i></h1>
             <div class="projects-carousel">
                 <div class="projects-container">
                     <div class="project" data-index="0">
