--- a/contact.html
+++ b/contact.html
@@ -24,12 +24,35 @@
             </nav>
         </header>
         <main>
-            <h1>Contact</h1>
-            <!-- Contact content here -->
+            <h1>Contact<i>!</i></h1>
+            <p class="contact-description">Have any questions, feedback, or just want to say hello? Feel free to reach out!</p>
+            <form class="contact-form" action="#" method="POST">
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" placeholder="Your Name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Your Email" required>
+                </div>
+                <div class="form-group">
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" rows="5" placeholder="Your Message" required></textarea>
+                </div>
+                <button type="submit" class="submit-btn">Send Message</button>
+            </form>
+            <div class="contact-info">
+                <p>
+                    <span>Email: <a href="mailto:rowenlatif@gmail.com">rowenlatif@gmail.com</a></span> |
+                    <span>Phone: <a href="tel:+12154948086">+1 215-494-8086</a></span> |
+                    <span>Follow me on: 
+                        <a href="#" class="social-link">LinkedIn</a>, 
+                        <a href="#" class="social-link">GitHub</a>
+                    </span>
+                </p>
+            </div>            
         </main>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
-
-
-
