specific projects page + some js

--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
                         <h2>Doll Dress-Up Game</h2>
                         <img src="images/project1.jpg" alt="Project 1">
                         <p>Create the perfect outfit within the time limit!</p>
-                        <a href="#" class="read-more">Read More</a>
+                        <a href="project1.html" class="read-more">Read More</a>
                     </div>
                     <div class="project" data-index="1">
                         <h2>Visual Novel</h2>
