fix projects container errors

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     blending my interests in illustration, graphic design, and 
                     coding to create projects that tell meaningful stories. I 
                     love finding that perfect balance between functionality and 
-                    aesthetics, using a design-focused approach to bring ideas 
-                    to life.
+                    aesthetics, using a design-focused approach to bring my 
+                    ideas to life.
                 </p>
             </div>
         </main>
