--- a/project2.html
+++ b/project2.html
@@ -64,11 +64,12 @@
             </div>
         
             <div class="description"> 
-                <h1>DOLL DRESS UP GAME<i>!</i></h1>
+                <h1>VISUAL NOVEL<i>!</i></h1>
                 <p>
-                    Welcome to the Doll Dress Up Game! Select the perfect outfit given the randomized theme in time! 
-                    Click through the left/right sides of the slideshow to see different gameplay screenshots. Created
-                    using Processing. All art assets created using Procreate.
+                    Follow Theo as he grapples with the lingering guilt of a past relationship.
+                    When he accidentally stumbles upon a reminder, he is forced to come to terms 
+                    with his past. Each choice influences Theo's journey, leading to one of two 
+                    endings. Will he finally be able to move on? Currently a demo.
                 </p>
             </div>
         </div>
