--- a/projects.html
+++ b/projects.html
@@ -37,19 +37,19 @@
                         <h2>Visual Novel</h2>
                         <img src="images/project2.jpg" alt="Project 2">
                         <p>A light-hearted romantic comedy story (work in progress).</p>
-                        <a href="#" class="read-more">Read More</a>
+                        <a href="project2.html" class="read-more">Read More</a>
                     </div>
                     <div class="project" data-index="2">
                         <h2>Another Project</h2>
                         <img src="images/project3.jpg" alt="Project 3">
                         <p>Brief description of the project.</p>
-                        <a href="#" class="read-more">Read More</a>
+                        <a href="project3.html" class="read-more">Read More</a>
                     </div>
                     <div class="project" data-index="3">
                         <h2>Starborne Card Game</h2>
                         <img src="images/project4.jpg" alt="Project 4">
                         <p>Beat your opponent using the strongest cards (work in progress).</p>
-                        <a href="#" class="read-more">Read More</a>
+                        <a href="project4.html" class="read-more">Read More</a>
                     </div>
                 </div>
             </div>
