--- a/projects.html
+++ b/projects.html
@@ -36,19 +36,19 @@
                     <div class="project" data-index="1">
                         <h2>Visual Novel</h2>
                         <img src="images/project2.jpg" alt="Project 2">
-                        <p>A light-hearted romantic comedy story (work in progress).</p>
+                        <p>A light-hearted romantic comedy story.</p>
                         <a href="project2.html" class="read-more">Read More</a>
                     </div>
                     <div class="project" data-index="2">
-                        <h2>Another Project</h2>
+                        <h2>Google AD Blocker</h2>
                         <img src="images/project3.jpg" alt="Project 3">
-                        <p>Brief description of the project.</p>
-                        <a href="project3.html" class="read-more">Read More</a>
+                        <p>In progress...</p>
+                        <a href="projects.html" class="read-more">Read More</a>
                     </div>
                     <div class="project" data-index="3">
                         <h2>Starborne Card Game</h2>
                         <img src="images/project4.jpg" alt="Project 4">
-                        <p>Beat your opponent using the strongest cards (work in progress).</p>
+                        <p>Beat your opponent using the strongest cards!</p>
                         <a href="project4.html" class="read-more">Read More</a>
                     </div>
                 </div>
