--- a/project2.html
+++ b/project2.html
@@ -29,22 +29,22 @@
                 <div class="slideshow-container">
                     <!-- Full-width images with number and caption text -->
                     <div class="mySlides fade">
-                      <img src="project imgs/DD/DDmainScreen.png" style="width:100%">
+                      <img src="project imgs/VN/VNgameplay1.png" style="width:100%">
                     </div>
                     <div class="mySlides fade">
-                      <img src="project imgs/DD/DDgameplay1.png" style="width:100%">
+                      <img src="project imgs/VN/VNgameplay1.png" style="width:100%">
                     </div>
                     <div class="mySlides fade">
-                      <img src="project imgs/DD/DDgameplay2.png" style="width:100%">
+                      <img src="project imgs/VN/VNgameplay1.png" style="width:100%">
                     </div>
                     <div class="mySlides fade">
-                      <img src="project imgs/DD/DDgameplay3.png" style="width:100%">
+                      <img src="project imgs/VN/VNgameplay1.png" style="width:100%">
                     </div>
                     <div class="mySlides fade">
-                      <img src="project imgs/DD/DDgameplay4.png" style="width:100%">
+                      <img src="project imgs/VN/VNgameplay1.png" style="width:100%">
                     </div>
                     <div class="mySlides fade">
-                      <img src="project imgs/DD/DDendScreen.png" style="width:100%">
+                      <img src="project imgs/VN/VNgameplay1.png" style="width:100%">
                     </div>
         
                     <!-- Next and previous buttons -->
