--- a/project2.html
+++ b/project2.html
@@ -15,8 +15,8 @@
                     <li><a href="gallery.html">GALLERY</a></li>
                 </ul>
                 <div class="logo">
-                    <img src="placeholder-logo.png" alt="logo">
-                </div>
+                    <a href="index.html"><img src="images/star.png" alt="Logo"></a>
+                </div>   
                 <ul class="nav-links right-links">
                     <li><a href="projects.html">PROJECTS</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
@@ -29,7 +29,7 @@
                 <div class="slideshow-container">
                     <!-- Full-width images with number and caption text -->
                     <div class="mySlides fade">
-                      <img src="project imgs/VN/VNgameplay1.png" style="width:100%">
+                      <img src="project imgs/VN/VNmainScreen.png" style="width:100%">
                     </div>
                     <div class="mySlides fade">
                       <img src="project imgs/VN/VNgameplay1.png" style="width:100%">
