--- a/projects.html
+++ b/projects.html
@@ -15,8 +15,8 @@
                     <li><a href="gallery.html">GALLERY</a></li>
                 </ul>
                 <div class="logo">
-                    <img src="placeholder-logo.png" alt="logo">
-                </div>
+                    <a href="index.html"><img src="images/star.png" alt="Logo"></a>
+                </div>     
                 <ul class="nav-links right-links">
                     <li><a href="projects.html">PROJECTS</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
