--- a/project2.html
+++ b/project2.html
@@ -66,7 +66,9 @@
                     Follow Theo as he grapples with the lingering guilt of a past relationship.
                     When he accidentally stumbles upon a reminder, he is forced to come to terms 
                     with his past. Each choice influences Theo's journey, leading to one of two 
-                    endings. Will he finally be able to move on? Currently a demo.
+                    endings. Click through the left/right sides of the slideshow to see different 
+                    gameplay screenshots.  Currently a demo. Built in HTML, CSS, JS. Created all 
+                    art assets.
                 </p>
             </div>
         </div>
