--- a/projects.html
+++ b/projects.html
@@ -29,25 +29,25 @@
                 <div class="projects-container">
                     <div class="project" data-index="0">
                         <h2>Doll Dress-Up Game</h2>
-                        <img src="images/project1.jpg" alt="Project 1">
+                        <!-- <img src="images/banner1.png" alt="Project 1"> -->
                         <p>Create the perfect outfit within the time limit!</p>
                         <a href="project1.html" class="read-more">Read More</a>
                     </div>
                     <div class="project" data-index="1">
                         <h2>Visual Novel</h2>
-                        <img src="images/project2.jpg" alt="Project 2">
+                        <!-- <img src="images/banner2.png" alt="Project 2"> -->
                         <p>A light-hearted romantic comedy story.</p>
                         <a href="project2.html" class="read-more">Read More</a>
                     </div>
                     <div class="project" data-index="2">
                         <h2>Google AD Blocker</h2>
-                        <img src="images/project3.jpg" alt="Project 3">
+                        <!-- <img src="images/project3.jpg" alt="Project 3"> -->
                         <p>In progress...</p>
                         <a href="projects.html" class="read-more">Read More</a>
                     </div>
                     <div class="project" data-index="3">
                         <h2>Starborne Card Game</h2>
-                        <img src="images/project4.jpg" alt="Project 4">
+                        <!-- <img src="images/project4.jpg" alt="Project 4"> -->
                         <p>Beat your opponent using the strongest cards!</p>
                         <a href="projects.html" class="read-more">Read More</a>
                     </div>
