--- a/project3.html
+++ b/project3.html
@@ -71,7 +71,8 @@
                     brothers. Easily manage deadlines, check off requirements, 
                     and stay updated with real-time notifications—all within 
                     a retro-inspired interface. Click through the left/right 
-                    areas of the slideshow to see different prototype screenshots.
+                    areas of the slideshow to see different Figma prototype 
+                    screenshots.
                 </p>
             </div>
         </div>
