--- a/project1.html
+++ b/project1.html
@@ -12,7 +12,7 @@
             <nav class="navbar">
                 <ul class="nav-links left-links">
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="gallery.html">GALLERY</a></li>
+                    <li><a href="galleryALT.html">GALLERY</a></li>
                 </ul>
                 <div class="logo">
                     <a href="index.html"><img src="images/star.png" alt="Logo"></a>
