--- a/index.html
+++ b/index.html
@@ -1,6 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Rowen Latif — Portfolio</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+
+  <header>
+    <div class="flash-overlay"></div>
+
+    <nav class="navbar">
+      <ul>
+        <li><a href="https://rowenlatif.github.io/rowen-portfolio/index.html" class="active">HOME</a></li>
+        <!-- <li><a href="gallery.html">GALLERY</a></li> -->
+        <li><a href="https://rowenlatif.github.io/rowen-portfolio/projects.html">PROJECTS</a></li>
+        <li><a href="https://rowenlatif.github.io/rowen-portfolio/about.html">ABOUT</a></li>
+        <li><a href="https://rowenlatif.github.io/rowen-portfolio/contact.html">CONTACT</a></li>
+      </ul>
+    </nav>        
+  </header>
+
+  <main>
+    <div class="env">
+      <img src="images/env-main.png" alt="envelope graphic" class="env-img-top">
+
+      <div class="env-title">
+        <p class="line-1">PORTFOLIO</p>
+        <p class="line-2">curated by</p>
+        <p class="line-3">rowen latif</p>
+      </div>
+
+      <div class="env-sig">
+        <p class="line-1-2">signed,</p>
+        <p class="line-2-2">rowen latif</p>
+      </div>
+    </div>
+
+    <div class="social-icons">
+      <a href="https://github.com/rowenlatif" target="_blank">
+        <img src="images/logo-github.png" alt="GitHub" />
+      </a>
+      <a href="https://www.linkedin.com/in/rowen-latif/" target="_blank">
+        <img src="images/logo-linkedin.png" alt="LinkedIn" />
+      </a>
+      <!-- <a href="assets/docs/resume.pdf" target="_blank">
+        <img src="assets/imgs/logo-linkedin.png" alt="Resume" />
+      </a> -->
+    </div>    
+  </main>
+
+  <script src="dist/main.js" type="module"></script>
+</body>
+</html>
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rowen Latif Portfolio</title>
@@ -42,12 +99,4 @@
         </main>
     </div>
 </body>
-</html>
-
-
-    <!-- 
-
-    Built and designed by Rowen Latif.
-    All rights reserved. ©
-
-    /-->
+</html> -->
